# LeetCode_14_Longest_Common_Prefix

./: CMakeLists.txt  ReadMe.md  main.cpp
